# tradeblocks

./: .gitignore  .gitlab-ci.yml  .mcp.json  CLAUDE.md  CONTRIBUTING-UPSTREAM.md  CONTRIBUTING.md  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  requirements.txt  setup_nemoblock2.sh  tsconfig.json  vercel.json
.claude/: CLAUDE.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: beta-release.yml  ci.yml  dependabot-auto-merge.yml  release.yml  update-treasury-rates.yml
.gitlab/merge_request_templates/: Default.md
.planning/: AUDIT-FINDINGS.md  ISSUES.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TODOS.md  agent-history.json  config.json  market-data-mcp-update.md  v2.7-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/market-data-integration/: PLAN.md
.planning/milestones/: v1.0-wfa-enhancement.md  v2.0-claude-integration.md  v2.1-portfolio-comparison.md  v2.2-historical-risk-free-rates.md  v2.3-workspace-packages.md  v2.4-backtest-optimization-tools.md  v2.5-MILESTONE-AUDIT.md  v2.5-REQUIREMENTS.md  v2.5-reporting-log-integration.md  v2.6-MILESTONE-AUDIT.md  v2.6-REQUIREMENTS.md  v2.6-duckdb-analytics-layer.md  v2.7-REQUIREMENTS.md  v2.7-edge-decay-analysis.md  v2.8-REQUIREMENTS.md  v2.8-market-data-consolidation.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: globals.css  layout.tsx
components/: app-sidebar.tsx  block-dialog.tsx  block-switch-dialog.tsx  database-reset-handler.tsx  equity-curve-column-mapper.tsx  equity-curve-upload-dialog.tsx  import-guide-dialog.tsx  metric-card.tsx  metric-section.tsx  multi-select.tsx  nav-main-grouped.tsx  nav-main.tsx  performance-export-dialog.tsx  progress-dialog.tsx  sidebar-active-blocks.tsx  sidebar-footer-legal.tsx  site-header.tsx  sizing-mode-toggle.tsx  strategy-breakdown-table.tsx
components/performance-charts/: chart-wrapper.tsx  (+23 more)
docs/: IMPLEMENTATION_SUMMARY.md  PL_CALENDAR_NOTES.md  SYNC_UPSTREAM.md  architecture.md  calendar-filter-examples.md  calendar-sensitivity.md  development.md  getting-started.md  market-data.md  mcp-tools.md  usage.md  web-platforms.md
gpt/: README.md  codebase-context.md  system-prompt.md  wfa.md
hooks/: use-progress-dialog.ts
releases/: v2.2.md  v3.0.md
scripts/: README.md  check-code.sh  debug-withdrawal-sim.ts  fix-code.sh  generate_custom_indicators.py  generate_indicators.py  generate_spx_daily.py  market-data-export.pine  setup.sh  spx-15min-checkpoints.pine  spx-30min-checkpoints.pine  spx-daily.pine  spx-highlow-timing.pine  spx-hourly-checkpoints.pine  start-dev.sh  verify_ingestion_logic.ts  vix-intraday.pine
tests/: withdrawal-simulator-reset.test.ts
(+622 files in other folders)
